[workspace]
members = [".", "examples/popup"]

[package]
name = "iced_popup"
version = "0.1.0"
edition = "2024"
authors = ["Charles Ray <ray.iced.projects@gmail.com>"]
description = "A popup widget for the iced GUI framework"
license = "MIT"
repository = "https://github.com/..."
keywords = ["iced", "popup", "gui", "widget"]
categories = ["gui"]

[lib]
name = "popup"
path = "src/lib.rs"


[dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "4255f61", features = ["advanced", "debug"] }
